k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registration-api
  namespace: registration
  labels: 
    app: registration-api
spec:
  type: ClusterIP
  selector:
    app: registration-api
  ports:
    - name: http
      port: 80
      targetPort: http
