k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registration-api
  namespace: registration
spec: 
  ingressClassName: traefik
  rules: 
    - host: signup.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registration-api
                port:
                  number: 80
